# isv-solutions-architect-sample

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
docs/: api_partner_openapi.yaml  architecture.md  authentication.md  demo_script.md  observability.md  questions_bank.md  quests.md  salesforce_integration.md  sre_playbook.md
infra/local/: .env.example  pubsub-emulator.sh
scripts/: create_first_issues.sh  dev_setup.ps1  dev_setup.sh  seed.sh  smoke.sh
services/integration-hub/: README.md  package-lock.json  package.json
services/integration-hub/src/: config.ts  faultToggle.ts  index.ts  logger.ts  metrics.ts  salesforceClient.ts  subscriber.ts
services/integration-hub/tests/: basic.test.ts
services/partner-app/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/partner-app/alembic/: env.py
services/partner-app/partner_app/: db.py  main.py  models.py  pubsub_client.py
services/partner-app/tests/: test_orders.py
services/salesforce-mock/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/salesforce-mock/src/: index.ts
